--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "solana-memecoin-scanner",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "start": "node backend/index.js"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.98.0",
     "express": "^4.19.2",
-    "ws": "^8.18.0"
+    "ws": "^8.17.0"
   }
 }
