--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "solana-memecoin-scanner",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
     "start": "node backend/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "ws": "^8.15.0",
+    "express": "^4.18.2",
+    "axios": "^1.5.0"
   }
 }
