--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "solana-memecoin-scanner",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Real-time Solana memecoin scanner",
+  "main": "backend/index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node backend/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.14.1"
+    "ws": "^8.14.0"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   }
 }
